# opengl

./: CMakeLists.txt  gen.bat
include/glad/: glad.h
shader/: 3.3.shader.fs  3.3.shader.vs
src/: glad.c  graph.cpp  graph.h  head.cpp  head.h  main.cpp  shader.cpp  shader.h  shadermgr.cpp  shadermgr.h
